--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.orbit-container {
+  width: 400px;
+  height: 400px;
+  margin: auto;
+  position: relative;
+}
